# Ray-Invaders

./: .clang-format  .clang-tidy  .clangd  .env  .gitignore  Animation.cpp  Animation.hpp  Backbuffer.cpp  Backbuffer.hpp  Background.cpp  Background.hpp  BannerUI.cpp  BannerUI.hpp  Base.cpp  Base.hpp  Bases.cpp  Bases.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  CMakePresets.json  Collision.hpp  DrawText.cpp  DrawText.hpp  Enemy.cpp  Enemy.hpp  EnemyManager.cpp  EnemyManager.hpp  Global.hpp  Hit.hpp  HitManager.cpp  HitManager.hpp  Main.cpp  Main.i  Makefile  Player.cpp  Player.hpp  Popup.cpp  Popup.hpp  PowerUp.cpp  (+32 more)
docs/: README-CrossPlatform.md  README.md  profiling.md
